Add initial version of sample src

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "get-started-angular",
   "version": "0.1.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "start": "ng serve --open --poll=2000 --port 3000",
     "build": "ng build",
-    "test": "ng test",
+    "build:prod": "ng build --prod",
+    "test": "ng test --poll=2000",
+    "test:cov": "ng test --watch=false --code-coverage --source-map",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -19,6 +21,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.5",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
